fix: prevent content that overflow from jumping out of iframe

--- a/apps/public-docsite-v9/public/shell.css
+++ b/apps/public-docsite-v9/public/shell.css
@@ -47,6 +47,11 @@
   background: transparent;
 }
 
+/* Set position fixed to create a layer and prevent iframe from jumping when context overflows */
+[role='main'] {
+  position: fixed;
+}
+
 /* remove box shadow style from storybooks wrapper div */
 [role='main'] > div {
   box-shadow: none;
